--- a/index.html
+++ b/index.html
@@ -967,9 +967,9 @@
 
 
   <script>
-    var _pathApp = "http://127.0.0.1:5500/";
+    // var _pathApp = "https://leandroesoto.github.io/";
 
-    var _pathProducto = "http://127.0.0.1:5500/assets/";
+    var _pathProducto = "./assets/";
 
     var tokenProducto = "";
 
@@ -1205,7 +1205,7 @@
       animType: 'svg',
       autoplay: false,
       loop: true,
-      path: _pathProducto + "img/music-player-icon.json"
+      path: _pathProducto + "img/music-player-iconxxx.json"
     });
   </script>
 
