--- a/invitacion/15-sofi.html
+++ b/invitacion/15-sofi.html
@@ -1046,7 +1046,7 @@
 
 
   <!-- Lottie -->
-  <script src="../assets/js/lottie_svg.min.js"></script>
+  <script src="./assets/js/lottie_svg.min.js"></script>
 
   <!-- Animacion loader -->
   <script>
