--- a/index.html
+++ b/index.html
@@ -1205,7 +1205,7 @@
       animType: 'svg',
       autoplay: false,
       loop: true,
-      path: _pathProducto + "img/music-player-iconxxx.json"
+      path: _pathProducto + "img/music-player-icon.json"
     });
   </script>
 
