--- a/index.html
+++ b/index.html
@@ -527,13 +527,13 @@
 
         <div class="w-100">
 
-          <a target="_blank" href="https://www.instagram.com/sofia_soto.okk/" class="hashtag">#15sofi</a>
+          <a target="_blank" href="https://www.instagram.com/sof14_xx_/" class="hashtag">Sofi</a>
 
         </div>
 
         <br>
 
-        <a target="_blank" href="https://www.instagram.com/" class="boton">Ver en Instagram</a>
+        <!-- <a target="_blank" href="https://www.instagram.com/" class="boton">Ver en Instagram</a> -->
 
       </div>
     </div>
