--- a/index.html
+++ b/index.html
@@ -1147,20 +1147,16 @@
 
     // 4. The API will call this function when the video player is ready.
     function onPlayerReady(event) {
-      event.target.setVolume(80);
-      // event.target.playVideo();
+      event.target.setVolume(50);
+      event.target.playVideo();
+      animMusicAnimIcon.play();
+
     }
 
     // Pausar video
     function pauseVideo() {
       player.pauseVideo();
     }
-
-    //       setTimeout(function() {
-    //           $('#play-pause-music').click();
-    //       }, 4000);
-    // 2
-
 
 
     // Click en controlador musica
@@ -1178,7 +1174,6 @@
         animMusicAnimIcon.play();
         player.playVideo();
 
-        console.log('se hizo click en el videooooo')
       }
 
       // Play music
