--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
 
           <div class="modal-header">
 
-            <h5 class="modal-title">Agregale musica</h5>
+            <h5 class="modal-title">Agrégale música</h5>
 
           </div>
 
@@ -1055,10 +1055,6 @@
     });
   </script>
 
-
-
-
-
   <!-- Animaciones de diseño -->
   <script>
     let svgContainerMusicAnimIcon = document.querySelector('.music-anim-icon');
@@ -1071,10 +1067,6 @@
       path: _pathProducto + "img/music-player-icon.json"
     });
   </script>
-
-
-
-
 
   <!-- Animacion corazon seccion cuenta regresiva-->
   <script>
